1) DISTR module introduced but still need some enhancements